dashabordss to dashboards

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,8 +21,8 @@ jobs:
           key: ${{ secrets.EC2_SSH_KEY }}
           port: 22
           script: |
-            git config --global --add safe.directory ${{ secrets.EC2_APP_DIR }}
-            cd ${{ secrets.EC2_APP_DIR }}/backend
+            git config --global --add safe.directory /var/www
+            cd /var/www/backend
             # git reset --hard origin/main
             git stash push -m "before deploy"
             git pull origin main
@@ -44,8 +44,8 @@ jobs:
           key: ${{ secrets.EC2_SSH_KEY }}
           port: 22
           script: |
-            git config --global --add safe.directory ${{ secrets.EC2_APP_DIR }}
-            cd ${{ secrets.EC2_APP_DIR }}/frontend
+            git config --global --add safe.directory /var/www
+            cd /var/www/frontend
             # git reset --hard origin/main
             git stash push -m "before deploy"
             git pull origin main
